--- a/domains/matchpoint-app.json
+++ b/domains/matchpoint-app.json
@@ -1,6 +1,7 @@
 {
     "owner": {
         "username": "RiccardoMaistri"
+        "email":"riccardo.maistri95@gmail.com
     },
     "record": {
         "CNAME": "bb141552-f8c1-4e35-8c31-8d59db75d7f6.cfargotunnel.com"
