--- a/domains/matchpoint-app.json
+++ b/domains/matchpoint-app.json
@@ -3,7 +3,7 @@
         "username": "RiccardoMaistri"
         "email":"riccardo.maistri95@gmail.com
     },
-    "record": {
+    "records": {
         "CNAME": "bb141552-f8c1-4e35-8c31-8d59db75d7f6.cfargotunnel.com"
     }
 }
